--- a/hdbx_query/src/css/oupsQuery/index.less
+++ b/hdbx_query/src/css/oupsQuery/index.less
@@ -193,7 +193,7 @@
       padding-bottom: 0px;
       padding-right: 10px;
       padding-left: 30px;
-      &:nth-of-type(1){
+      &:nth-of-type(1) {
         padding-left: 0px;
       }
     }
@@ -202,7 +202,25 @@
 
   }
   &.obtainType {
-
+    .upload-way {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      &.other {
+        align-items: flex-start;
+        flex-direction: column;
+      }
+      > div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin-right: 35px;
+        &:nth-last-of-type(1) {
+          margin-right: 0px;
+        }
+      }
+    }
   }
   &.rightScope {
     .rightScopePart {
@@ -304,7 +322,7 @@
     justify-content: flex-start;
     align-items: center;
   }
-  .label{
+  .label {
     padding: 0px 10px;
     color: @cGrey;
   }
@@ -340,17 +358,23 @@
       display: flex;
       justify-content: flex-start;
       align-items: center;
-      .serial{
+      .serial {
         width: 600px;
         margin: 0px 20px;
       }
     }
-    .ibox{
+    .ibox {
       padding-bottom: 20px;
       padding-top: 40px;
-      &:nth-of-type(1){
+      &:nth-of-type(1) {
         padding-top: 0px;
       }
     }
+  }
+}
+
+.el-message-box__wrapper {
+  .el-message-box {
+    width: auto;
   }
 }
