--- a/hdbx_query/src/css/oupsQuery/index.less
+++ b/hdbx_query/src/css/oupsQuery/index.less
@@ -113,6 +113,8 @@
     width: 1200px;
     margin: 0px auto;
     box-sizing: border-box;
+    position: relative;
+    z-index: 1;
     .nav-title {
       font-size: 20px;
       color: rgb(0, 0, 0);
@@ -253,7 +255,7 @@
         align-items: flex-start;
 
         .item {
-          padding-right: 80px;
+          width: 30%;
           p {
             padding-bottom: 10px;
           }
@@ -284,7 +286,7 @@
       }
     }
   }
-  &completeDate {
+  &.completeDate {
     display: flex;
     align-items: center;
     .title {
@@ -476,14 +478,17 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  flex-wrap: wrap;
   .way-check-box {
     padding: 20px 15px;
-    width: 310px;
+    width: 360px;
     min-height: 120px;
     border-radius: 5px;
     box-sizing: border-box;
     border: 1px solid rgba(0, 0, 0, .08);
     margin-right: 10px;
+    margin-bottom: 15px;
+    cursor: default;
     .w-title {
       color: #000;
       padding-bottom: 8px;
@@ -578,7 +583,7 @@
     }
     td {
       text-align: center;
-      .el-button{
+      .el-button {
         color: @blue;
       }
     }
