--- a/hdbx_query/src/css/oupsQuery/index.less
+++ b/hdbx_query/src/css/oupsQuery/index.less
@@ -334,6 +334,7 @@
   .owner {
     border-bottom: 1px solid rgb(243, 243, 243);
     padding: 45px 0px;
+
     &:nth-of-type(1) {
       padding-top: 0px;
     }
@@ -530,6 +531,18 @@
   &.on {
     img {
       transform: rotate(180deg);
+    }
+  }
+}
+
+.step_2 {
+  .country-city-select {
+    .el-select {
+      width: 164px;
+      margin-right: 6px;
+    }
+    .el-cascader {
+      width: 454px;
     }
   }
 }
