--- a/hdbx_query/src/components/oupsQuery/components/index.less
+++ b/hdbx_query/src/components/oupsQuery/components/index.less
@@ -46,7 +46,7 @@
   }
 }
 
-.flex {
+.flex,.flex-info {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -491,7 +491,7 @@
   align-items: center;
   padding-left: 3px;
   font-size: 14px !important;
-
+  color: red !important;;
   &:before {
     position: relative;
     display: inline-block;
