--- a/hdbx_query/src/components/oupsQuery/components/index.less
+++ b/hdbx_query/src/components/oupsQuery/components/index.less
@@ -340,6 +340,13 @@
         .flex {
           padding-top: 10px;
           justify-content: flex-start;
+          align-items: flex-start;
+          .mr10{
+            width: 164px;
+          }
+          .el-form-item__error{
+            position: relative;
+          }
           .el-input-group--prepend {
             .el-input__inner {
               width: 531px;
