--- a/hdbx_query/src/components/oupsQuery/components/index.less
+++ b/hdbx_query/src/components/oupsQuery/components/index.less
@@ -331,7 +331,7 @@
         .cont {
             display: flex;
             justify-content: flex-start;
-            align-items: flex-start;
+            align-items: center;
             .sub_title {
                 padding-bottom: 10px;
                 font-size: 15px;
