--- a/hdbx_query/src/components/oupsQuery/components/componets.less
+++ b/hdbx_query/src/components/oupsQuery/components/componets.less
@@ -20,8 +20,9 @@
     }
     .el-radio-button {
       margin-right: 10px;
+      margin-bottom: 10px;
       border: none;
-      width: 148px;
+      width: 165px;
       &:nth-last-of-type(1) {
         margin-right: 0px;
       }
